Fix spacing on dictionary words
Added back the separator at the end of the dictionary.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -179,6 +179,7 @@ input:-moz-placeholder {
 .speech-type {
   color: #efe8e8;
   font-weight: 200;
+  margin-right: 4px;
 }
 
 /*
